backend-todo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-todo
spec:
  selector:
    matchLabels:
      app: backend-todo
      tier: backend
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: backend-todo
        tier: backend
        track: stable
    spec:
      containers:
        - name: backend-todo
          image: bayukrsn/backend-todo:v1
          ports:
            - containerPort: 8181
      imagePullSecrets:
        - name: todo-secret
