backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-todo
  namespace: development
spec:
  selector:
    app: backend-todo
    tier: backend
  ports:
  - protocol: TCP
    port: 8181
    targetPort: http
