frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-todo
  namespace: development
spec:
  type: LoadBalancer
  selector:
    app: frontend-todo
    tier: frontend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
