postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-todo
  namespace: development
spec:
  selector:
    app: postgres-todo
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
