ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  defaultBackend:
    service:
      name: frontend-service-todo
      port:
        number: 8080
  rules:
  - host:
    http:
     paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: frontend-service-todo
             port: 
               number: 8080
