vs-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-route
  namespace: development
spec:
  hosts:
  - reviews # interpreted as reviews.foo.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/"
    rewrite:
      uri: "/backend"
    route:
    - destination:
        host: backend-todo # interpreted as reviews.foo.svc.cluster.local
        subset: v2
  - route:
    - destination:
        host: backend-todo # interpreted as reviews.foo.svc.cluster.local
        subset: v1
